force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_CLEANING_CONTRACT_SERVICES__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CLEANING_CONTRACT_SERVICES__c</fullName>
    <label>Cleaning Contract Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>