force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_CLEANING_CONTRACT_SERVICES_GOV__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CLEANING_CONTRACT_SERVICES_GOV__c</fullName>
    <label>Gov Leased Space-Cleaning Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>