force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Close_To_Metro__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Close_To_Metro__c</fullName>
    <description>Is the building within 2,640 walkable linear feet of a metrorail station?</description>
    <label>2640 ft from Public Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>