force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Common_Parent_TIN__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Common_Parent_TIN__c</fullName>
    <label>Common Parent TIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>