force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_COMPLIANCE_REPORT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_COMPLIANCE_REPORT__c</fullName>
    <description>(a) Does the property owner represent that it has filed all required compliance reports?</description>
    <label>Compliance Report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>