force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Confirm_Owner_Status__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Confirm_Owner_Status__c</fullName>
    <label>Confirm Owner Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>