force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Congressional_District__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Congressional_District__c</fullName>
    <description>The congressional district in which the building resides.</description>
    <label>Congressional District</label>
    <length>128</length>
    <type>Text</type>
</CustomField>