force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_CONTROLLED_BY_PARENT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CONTROLLED_BY_PARENT__c</fullName>
    <description>Is the property owner owned or controlled by a common parent?</description>
    <label>Controlled by Common Parent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>