force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Corporation_not_tax_felon__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Corporation_not_tax_felon__c</fullName>
    <label>Corporation not tax felon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>