force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_COST_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_COST_TYPE__c</fullName>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>