force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Country__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Country__c</fullName>
    <defaultValue>&quot;United States&quot;</defaultValue>
    <description>Country</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>