force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_County__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_County__c</fullName>
    <description>The county in which the building resides.</description>
    <label>County</label>
    <length>128</length>
    <type>Text</type>
</CustomField>