force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Current_Year_Taxes_1364_28__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Current_Year_Taxes_1364_28__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Current Year Taxes (1364-28)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>