force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Default_End__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Default_End__c</fullName>
    <formula>Text( PBS_AAAP_RLP_Number__r.PBS_AAAP_DEFAULT_MONTH_END__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default End</label>
    <type>Text</type>
</CustomField>