force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Default_Start__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Default_Start__c</fullName>
    <description>Formula field used in front end for showing the links (Edit, withdraw , copy, modify) based Default Start Date and End Date.</description>
    <formula>Text(PBS_AAAP_RLP_Number__r.PBS_AAAP_DEFAULT_MONTH_BEGIN__c)</formula>
    <label>Default Start</label>
    <type>Text</type>
</CustomField>