force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_DUNS_Number__c</fullName>
    <description>What is the property owner&apos;s Unique Entity Identifier # (formerly DUNS #)?</description>
    <label>UEI Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>