force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_EEO_CLAUSE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_EEO_CLAUSE__c</fullName>
    <description>Does the property owner represent that it has participated in a previous contract or subcontract subject to the Equal Opportunity clause of this solicitation?</description>
    <label>Equal Opportunity Clause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>