force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_ELECTRICAL_REPLACEMENT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ELECTRICAL_REPLACEMENT__c</fullName>
    <label>Electrical Replacement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>