force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Email__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>