force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Energy_Star__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Energy_Star__c</fullName>
    <description>Has the building earned an Energy Star Label conferred by the Environmental Protection Agency (EPA) within one year prior to submittal?</description>
    <label>Energy Star</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>