force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Energy_Star_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Energy_Star_Evaluation__c</fullName>
    <label>Efficiency Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improvements declared</fullName>
            </value>
            <value>
                <fullName>no effective improvements</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>