force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Energy_Star_Reason__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Energy_Star_Reason__c</fullName>
    <description>If no, please indicate what you will do prior to acceptance of the space (or no later than one year after the Lease Award Date of a succeeding lease) to renovate the space for all energy efficiency and conservation improvements that you deem to be cost effective over the firm term of the lease. If no improvements are proposed, you must indicate why no energy efficiency and conversation improvements are effective. If your explanation is considered unreasonable or if below box is left blank, your offer may be rejected.</description>
    <label>Energy Star Info</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>