force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Fire_Life_Meets__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Fire_Life_Meets__c</fullName>
    <inlineHelpText>With regard to Fire Protection and Life Safety:
The Property meets the Lease fire protection/life safety standards
The Property will be improved to meet the Lease fire protection/life safety standards.
The Property does not meet the Lease fire protection/life safety standards and will not be upgraded.</inlineHelpText>
    <label>Fire/Life Meets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meets</fullName>
            </value>
            <value>
                <fullName>Will meet</fullName>
            </value>
            <value>
                <fullName>Does not meet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>