force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_FIRE_SAFETY_CERT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_FIRE_SAFETY_CERT__c</fullName>
    <label>Fire Safety Cert</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Meets</fullName>
            </value>
            <value>
                <fullName>Will meet</fullName>
            </value>
            <value>
                <fullName>Does not meet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>