force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_FIRE_SAFETY_REQ_FLOORS1TO6__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_FIRE_SAFETY_REQ_FLOORS1TO6__c</fullName>
    <label>Fire Safety Req Floors1to6</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>