force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Flood_Plains__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Flood_Plains__c</fullName>
    <inlineHelpText>With regard to Flood Plains: 
The Property is in a base (100-year) floodplain.
The Property is in a (500-year) floodplain.
The Property is not in a floodplain.</inlineHelpText>
    <label>Flood Plains</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>