force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_floors_and_suites_offered__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_floors_and_suites_offered__c</fullName>
    <label>floor/s and or suite/s offered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>