force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Free_Parking_Spaces_Offered__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Free_Parking_Spaces_Offered__c</fullName>
    <description>Number of parking spaces that will be available free of charge?</description>
    <label>Free Parking Spaces Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>