force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Free_Space_Offered__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Free_Space_Offered__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>How much free space is being offered in addition to the ANSI/BOMA Office Area square footage?</description>
    <inlineHelpText>How much free space is being offered in addition to the ANSI/BOMA Office Area square footage?</inlineHelpText>
    <label>Free Space</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>