force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_GARAGE_SPACE_RSF__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_GARAGE_SPACE_RSF__c</fullName>
    <description>Garage Space :</description>
    <label>Other Space RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>