force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_GEN_PURPOSE_RENTABLE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_GEN_PURPOSE_RENTABLE__c</fullName>
    <description>Total amount of rentable square feet (RSF) in the building?</description>
    <label>Total Building RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>