force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Government_Occupancy_Percentage__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Government_Occupancy_Percentage__c</fullName>
    <label>Government Occupancy Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>