force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_HIST_PROP_IN_NON_HIST_DIST__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_HIST_PROP_IN_NON_HIST_DIST__c</fullName>
    <description>Is the property offered a historic property outside of a historic district?</description>
    <label>Historic Proprty Outside Historic Dist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>