force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_HUBZONE_IDENTIFIER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_HUBZONE_IDENTIFIER__c</fullName>
    <description>(e) Does the property owner represent, as part of its offer, that it is a HUBZone small business concern listed, on the date representation, on the List of Qualified HUBZone Small Business Concerns maintained by the Small Business Administration, and no material change in ownership and control, principal office, or HUBZone employee percentage has occurred since it was certified by the Small Business Administration in accordance with 13 part CFR part 126?</description>
    <label>HubZone Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>