force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_HUBZONE_JOINT_VENTURE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_HUBZONE_JOINT_VENTURE__c</fullName>
    <description>(f) Does the property owner represent, as part of its offer, that it is a joint venture that compiles with the requirements of 13 CFR part 126, and the representation in paragraph (b)(6)(i) of the GSA Form 3518 clause, entitled &quot;52.219-1 - SMALL BUSINESS PROGRAM REPRESENTATION (APR 2002),&quot; is accurate for the HUBZone small business concern or concerns that are participating in the joint venture?</description>
    <label>HUBZONE Joint Venture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>