force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_HUBZONE_JOINT_VENTURE_NAMES__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_HUBZONE_JOINT_VENTURE_NAMES__c</fullName>
    <description>(g) What are the name or names of HUBZone small business concern or concerns that are participating in the joint venture?</description>
    <label>HUBZONE Joint Venture Names</label>
    <length>80</length>
    <type>Text</type>
</CustomField>