force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_HubZone_SBC__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_HubZone_SBC__c</fullName>
    <label>Hubzone SBC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>