force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_HUBZone_SBC_Offeror__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_HUBZone_SBC_Offeror__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HUBZone SBC Offeror</label>
    <type>Checkbox</type>
</CustomField>