force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_HVAC_HRS_MON_TO_FRI_END__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_HVAC_HRS_MON_TO_FRI_END__c</fullName>
    <description>End :</description>
    <label>Monday - Friday Hours End</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:00 AM</fullName>
            </value>
            <value>
                <fullName>1:30 AM</fullName>
            </value>
            <value>
                <fullName>2:00 AM</fullName>
            </value>
            <value>
                <fullName>2:30 AM</fullName>
            </value>
            <value>
                <fullName>3:00 AM</fullName>
            </value>
            <value>
                <fullName>3:30 AM</fullName>
            </value>
            <value>
                <fullName>4:00 AM</fullName>
            </value>
            <value>
                <fullName>4:30 AM</fullName>
            </value>
            <value>
                <fullName>5:00 AM</fullName>
            </value>
            <value>
                <fullName>5:30 AM</fullName>
            </value>
            <value>
                <fullName>6:00 AM</fullName>
            </value>
            <value>
                <fullName>6:30 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>7:30 AM</fullName>
            </value>
            <value>
                <fullName>8:00 AM</fullName>
            </value>
            <value>
                <fullName>8:30 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>9:30 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:30 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>1:30 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM</fullName>
            </value>
            <value>
                <fullName>2:30 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM</fullName>
            </value>
            <value>
                <fullName>3:30 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>